# linux_peripheral_interfaces

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
computer_hw/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
computer_hw/conf/: cpu_monitor.launch  hd_monitor.launch  monitor.launch  ntp_monitor.launch
computer_hw/demo/: cpu_monitor.launch  hd_monitor.launch
computer_hw/executables/: cpu_monitor.py  hd_monitor.py  ntp_monitor.py  nvidia_temp.py  wifi_monitor.py
computer_hw/scripts/: cpu_monitor.py  hd_monitor.py  ntp_monitor.py  nvidia_temp.py  wifi_monitor.py
computer_hw/src/computer_hw/: gpu_stat_entity.py  gpu_status_monitor.py  gpu_util.py  nvidia_smi_util.py  nvidia_temperature_monitor.py  nvidia_util.py
computer_hw/src/computer_monitor/: nvidia_smi_util.py
computer_hw/test/: parse_test.py
computer_hw/test/sample_output/: nvidia_smi_out_2010.txt  nvidia_smi_out_2021.txt
laptop_battery_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
laptop_battery_monitor/scripts/: laptop_battery.py
libsensors_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
libsensors_monitor/include/libsensors_monitor/: libsensors_chip.h
libsensors_monitor/src/: libsensors_chip.cpp  libsensors_monitor.cpp
linux_peripheral_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
linux_utilities/: CMakeLists.txt  package.xml
wifi_monitor/: CMakeLists.txt  package.xml
wifi_monitor/launch/: network_status.launch
wifi_monitor/scripts/: network_status.py
wireless_monitor/: CMakeLists.txt  README.md  package.xml  setup.py
wireless_monitor/scripts/: wireless_monitor
wireless_monitor/src/wireless_monitor/: util.py  wireless.py
wireless_monitor/test/: test_util.py  test_wireless.py
