<package>
  <name>laptop_battery_monitor</name>
  <version>0.1.3</version>

  <description>
    Simple script to check battery status
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/laptop_battery_monitor</url>
  <url type="repository">https://github.com/ros-drivers/linux_peripheral_interfaces</url>
  <url type="bugtracker">https://github.com/ros-drivers/linux_peripheral_interfaces/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs </build_depend>
  <build_depend>smart_battery_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>smart_battery_msgs</run_depend>
</package>


