<?xml version="1.0"?>
<package>
  <name>linux_peripheral_interfaces</name>
  <version>0.2.0</version>
  <description>
     Simple scripts which help utilise, monitor, interact with computer
     hardware abstracted by a linux OS.
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/linux_peripheral_interfaces</url>
  <url type="repository">https://github.com/ros-drivers/linux_peripheral_interfaces</url>
  <url type="bugtracker">https://github.com/ros-drivers/linux_peripheral_interfaces.git/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>laptop_battery_monitor</run_depend>
  <run_depend>libsensors_monitor</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
