<package format="2">
  <name>wireless_monitor</name>
  <version>0.0.0</version>
  <description>Monitor a wireless network interface</description>
  <maintainer email="rein@eurotec.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python-psutil</exec_depend>
  <exec_depend>wireless-tools</exec_depend>
</package>
